Fixing issue where images and videos would be centered but cut off at the bottom. Added new script to help grab parent and grandparent concepts for words

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -6,19 +6,6 @@ body {
     padding-top: 4rem;
 }
 
-.figure-img {
-    max-height: 100%;
-    max-width: 100%;
-    width: auto;
-    height: auto;
-    position: absolute;
-    /*top: 0;*/
-    /*bottom: 0;*/
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
 .carousel-inner > .carousel-item > img {
     margin: 0 auto;
 }
@@ -115,6 +102,23 @@ body {
     height: 15px;
     background-color: #ccc;
     border: 1px solid #000;
+}
+
+.figure-imgage {
+    max-height: 100%;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    /*top: 0;*/
+    /*bottom: 0;*/
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+video::-webkit-media-controls-fullscreen-button {
+    display: none;
 }
 
 #annotation-video {
